--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -1,10 +1,10 @@
 name: Backend CI/CD
 
 on:
-  push:
-    branches: [main, master, develop]
-    paths:
-      - 'backend/**'
+  # push:
+  #   branches: [main, master, develop]
+  #   paths:
+  #     - 'backend/**'
   pull_request:
     branches: [main, master, develop]
     paths:
