--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -27,6 +27,9 @@ jobs:
         cache: 'npm'
         cache-dependency-path: frontend/package-lock.json
 
+    - name: Set npm cache directory
+      run: npm config set cache "$(npm config get cache)" --global
+
     - name: Install dependencies
       working-directory: ./frontend
       run: npm ci
