--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -7,7 +7,7 @@ on:
   #     - 'frontend/**'
   #     - '.github/workflows/frontend.yml'
   pull_request:
-    branches: [main, master, develop]
+    branches: [main, master, develop-frontend]
     paths:
       - 'frontend/**'
       - '.github/workflows/frontend.yml'
