--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -1,12 +1,12 @@
 name: Backend CI/CD
 
 on:
-  push:
-    branches: [main, master, develop]
-    paths:
-      - 'backend/**'
+  # push:
+  #   branches: [main, master, develop-backend]
+  #   paths:
+  #     - 'backend/**'
   pull_request:
-    branches: [main, master, develop]
+    branches: [main, master, develop-backend]
     paths:
       - 'backend/**'
 
