--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -26,6 +26,9 @@ jobs:
         node-version: '20.x'
         cache: 'npm'
         cache-dependency-path: frontend/package-lock.json
+        
+    - name: Set npm cache directory
+      run: npm config set cache "$(npm config get cache)" --global
 
     - name: Install dependencies
       working-directory: ./frontend
