Refactor npm cache handling in frontend workflow
Updated caching strategy for npm dependencies in CI workflow.

--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -27,8 +27,20 @@ jobs:
         cache: 'npm'
         cache-dependency-path: frontend/package-lock.json
         
-    - name: Set npm cache directory
-      run: npm config set cache "$(npm config get cache)" --global
+    - name: Cache dependencies
+      uses: actions/cache@v3
+      with:
+        path: |
+          ~/.npm
+          node_modules
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          
+    - name: Ensure cache paths exist
+      run: mkdir -p ~/.npm node_modules
+
+    - name: Install dependencies
+      working-directory: ./frontend
+      run: npm ci
 
     - name: Install dependencies
       working-directory: ./frontend
