--- a/.github/workflows/frontend.yml
+++ b/.github/workflows/frontend.yml
@@ -24,8 +24,9 @@ jobs:
       uses: actions/setup-node@v4
       with:
         node-version: '20.x'
-        # cache: 'npm'
-        # # cache-dependency-path: frontend/package-lock.json
+        cache: 'npm'
+        cache-dependency-path: frontend/package-lock.json
+        run: npm config set force true
 
     - name: Install dependencies
       working-directory: ./frontend
