fix api docker configs

--- a/backend/api-gateway/appsettings.json
+++ b/backend/api-gateway/appsettings.json
@@ -5,8 +5,8 @@
     "Audience": "LoanEligibilityClient"
   },
   "Services": {
-    "AuthService": "http://localhost:5002",
-    "LoanService": "http://localhost:5001"
+    "AuthService": "http://auth-service:5002",
+    "LoanService": "http://loan-service:5003"
   },
   "ReverseProxy": {
     "Routes": {
@@ -28,14 +28,14 @@
       "auth-cluster": {
         "Destinations": {
           "auth-destination": {
-            "Address": "http://localhost:5002"
+            "Address": "http://auth-service:5002"
           }
         }
       },
       "loan-cluster": {
         "Destinations": {
           "loan-destination": {
-            "Address": "http://localhost:5001"
+            "Address": "http://loan-service:5003"
           }
         }
       }
