--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -3,13 +3,20 @@ services:
     image: postgres:15
     restart: always
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER:-postgres}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-postgres}
+      POSTGRES_DB: ${POSTGRES_DB:-loaneligibility}
     volumes:
       - pgdata:/var/lib/postgresql/data
     ports:
       - "5432:5432"
+    networks:
+      - loan-network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U postgres"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
 
   # redis:
   #   image: redis:alpine
@@ -17,46 +24,96 @@ services:
   #   ports:
   #     - "6379:6379"
 
-  backend-api:
-    build:
-      context: ./backend/LoanEligibilityAPI
-      dockerfile: Dockerfile.dev
-    depends_on:
-      - postgres
-    container_name: backend-api
-      # - redis
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-      - ConnectionStrings__DefaultConnection=Host=postgres;Port=5432;Database=${POSTGRES_DB};Username=${POSTGRES_USER};Password=${POSTGRES_PASSWORD}
-      - ASPNETCORE_HTTP_PORTS=5203
-      # - ASPNETCORE_HTTPS_PORTS=5003
-      # - Redis__Configuration=redis:6379
-    ports:
-      - "5203:5203"
+  # backend-api:
+  #   build:
+  #     context: ./backend/LoanEligibilityAPI
+  #     dockerfile: Dockerfile.dev
+  #   depends_on:
+  #     - postgres
+  #   container_name: backend-api
+  #     # - redis
+  #   environment:
+  #     - ASPNETCORE_ENVIRONMENT=Development
+  #     - ConnectionStrings__DefaultConnection=Host=postgres;Port=5432;Database=${POSTGRES_DB};Username=${POSTGRES_USER};Password=${POSTGRES_PASSWORD}
+  #     - ASPNETCORE_HTTP_PORTS=5203
+  #     # - ASPNETCORE_HTTPS_PORTS=5003
+  #     # - Redis__Configuration=redis:6379
+  #   ports:
+  #     - "5203:5203"
       # - "5003:5003"
     # volumes:
     #   - ~/.aspnet/https:/https:ro
-
-  frontend:
+  api-gateway:
     build:
-      context: ./frontend
-      dockerfile: Dockerfile.dev
+      context: ./backend/api-gateway
+      dockerfile: Dockerfile
     ports:
-      - "3000:3000"
+      - "5001:5001"
     environment:
-      - NODE_ENV=development
-    develop:
-      watch:
-       - action: sync
-         path: ./frontend
-         target: /app
-         ignore:
-           - node_modules/
-       - action: rebuild
-         path: package.json
-
+      - ASPNETCORE_ENVIRONMENT=Development
+      - PORT=5001
+    networks:
+      - loan-network
     depends_on:
-      - backend-api
+      - auth-service
+      - loan-service
+
+  auth-service:
+    build:
+      context: ./backend/auth-service
+      dockerfile: Dockerfile
+    ports:
+      - "5002:5002"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - PORT=5002
+      - ConnectionStrings__DefaultConnection=Host=postgres;Port=5432;Database=${POSTGRES_DB:-authdb};Username=${POSTGRES_USER:-postgres};Password=${POSTGRES_PASSWORD:-postgres}
+    volumes:
+      - auth-data:/app/data
+    networks:
+      - loan-network
+    depends_on:
+      postgres:
+        condition: service_healthy
+
+  loan-service:
+    build:
+      context: ./backend/loan-service
+      dockerfile: Dockerfile
+    ports:
+      - "5003:5003"
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - PORT=5003
+      - ConnectionStrings__DefaultConnection=Host=postgres;Port=5432;Database=${POSTGRES_DB:-loaneligibility};Username=${POSTGRES_USER:-postgres};Password=${POSTGRES_PASSWORD:-postgres}
+    volumes:
+      - loan-data:/app/data
+    networks:
+      - loan-network
+    depends_on:
+      postgres:
+        condition: service_healthy
+
+  # frontend:
+  #   build:
+  #     context: ./frontend
+  #     dockerfile: Dockerfile.dev
+  #   ports:
+  #     - "3000:3000"
+  #   environment:
+  #     - NODE_ENV=development
+  #   develop:
+  #     watch:
+  #      - action: sync
+  #        path: ./frontend
+  #        target: /app
+  #        ignore:
+  #          - node_modules/
+  #      - action: rebuild
+  #        path: package.json
+
+  #   depends_on:
+  #     - api-gateway
 
   # nginx:
   #     image: nginx:alpine
@@ -68,6 +125,12 @@ services:
   #       - frontend
   #       - backend
 
+networks:
+  loan-network:
+    driver: bridge
+
 volumes:
+  auth-data:
+  loan-data:
   pgdata:
   
