add email microservice for email verification.

--- a/backend/auth-service/appsettings.json
+++ b/backend/auth-service/appsettings.json
@@ -7,6 +7,15 @@
     "Issuer": "LoanEligibilitySystem",
     "Audience": "LoanEligibilityClient"
   },
+  "App": {
+    "BaseUrl": "http://localhost:3000"
+  },
+  "Email": {
+    "VerificationUrl": "http://localhost:3000/verify-email"
+  },
+  "EmailService": {
+    "BaseUrl": "http://localhost:5004"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
