--- a/frontend/components.json
+++ b/frontend/components.json
@@ -16,7 +16,9 @@
     "utils": "@/lib/utils",
     "ui": "@/components/ui",
     "lib": "@/lib",
-    "hooks": "@/hooks"
+    "hooks": "@/hooks",
+    "messages": "@/messages",
+    "services": "@/services"
   },
   "registries": {}
 }
