Add Swagger API documentation and fix database initialization
- Add comprehensive Swagger/OpenAPI configuration to all microservices
  - API Gateway: Added Swagger UI with JWT Bearer authentication support
  - Auth Service: Added Swagger UI with JWT authentication and enhanced DB init
  - Email Service: Added Swagger UI configuration
  - Loan Service: Added Swagger UI with JWT authentication support
  - All services now have proper API documentation with titles, descriptions, and contact info
  - Swagger UI enabled in all environments with enhanced features (deep linking, filtering, validation)

- Fix database initialization in auth-service
  - Add retry logic (10 attempts, 2s delay) to wait for PostgreSQL to be ready
  - Add comprehensive logging for database connection and schema creation
  - Add explicit table name configuration in AuthDbContext for consistency
  - Improve error handling with detailed exception logging

- Fix docker-compose.dev.yml syntax error
  - Fix depends_on configuration in auth-service to use proper mapping format
  - Ensure postgres health check condition is properly configured

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -75,10 +75,11 @@ services:
     networks:
       - loan-network
     depends_on:
+      email-service:
+        condition: service_started
       postgres:
         condition: service_healthy
-      - email-service
-
+      
   loan-service:
     build:
       context: ./backend/loan-service
