extract email templates

--- a/backend/email-service/appsettings.json
+++ b/backend/email-service/appsettings.json
@@ -1,6 +1,6 @@
 {
   "Email": {
-    "FromAddress": "noreply@loaneligibility.com",
+    "FromAddress": "",
     "FromName": "Loan Eligibility System",
     "Mailgun": {
       "ApiKey": "",
