--- a/backend/email-service/EmailService.API.csproj
+++ b/backend/email-service/EmailService.API.csproj
@@ -16,6 +16,9 @@
     <Content Include="templates/**/*">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <Content Include="images/**/*">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </Content>
   </ItemGroup>
 
 </Project>
