--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -104,11 +104,13 @@ services:
       dockerfile: Dockerfile
     ports:
       - "5004:5004"
+    env_file:
+      - .env
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
       - PORT=5004
-      - Email__Mailgun__ApiKey=${MAILGUN_API_KEY:-}
-      - Email__Mailgun__Domain=${MAILGUN_DOMAIN:-}
+      - Email__Mailgun__ApiKey=${MAILGUN_API_KEY}
+      - Email__Mailgun__Domain=${MAILGUN_DOMAIN}
       - Email__Mailgun__BaseUrl=${MAILGUN_BASE_URL:-https://api.mailgun.net/v3}
       - Email__FromAddress=${EMAIL_FROM_ADDRESS:-noreply@loaneligibility.com}
       - Email__FromName=${EMAIL_FROM_NAME:-Loan Eligibility System}
